syntax = "proto3";

package other;

message FooTwo {
  int64 oneTwo = 1;
}
