syntax = "proto3";

package buf.v1;

import "google/protobuf/descriptor.proto";

extend google.protobuf.ExtensionRangeOptions {
  string extrange_option = 10101;
}
