syntax = "proto3";

package buf.v1;

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  string msg_option = 10101;
}
